--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cardano-Backend",
+  "name": "cardano-backend",
   "version": "1.0.0",
   "description": "AdaSouls Cardano Backend",
   "main": "src/index.js",
@@ -31,11 +31,13 @@
   ],
   "dependencies": {
     "@blockfrost/blockfrost-js": "^5.5.0",
+    "@emurgo/cardano-message-signing-nodejs": "^1.0.1",
+    "@emurgo/cardano-serialization-lib-nodejs": "^11.5.0",
     "axios": "^1.4.0",
     "compression": "^1.7.4",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.0",
-    "crypto-js": "^4.2.0",
     "diceware-word": "^1.0.0",
     "dotenv": "^10.0.0",
     "email-validator": "^2.0.4",
@@ -46,8 +48,7 @@
     "helmet": "^4.1.0",
     "http-status": "^1.4.0",
     "joi": "^17.3.0",
-    "jose": "^5.2.2",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.9.1",
     "pg": "^8.11.3",
     "pm2": "^5.1.0",
