--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "sequelize": "^6.29.0",
     "umzug": "^3.2.1",
     "winston": "^3.2.1",
-    "xss-clean": "^0.1.1"
+    "xss-clean": "^0.1.1",
+    "swagger-node-express": "~2.0",
+    "minimist": "*"
   },
   "devDependencies": {
     "coveralls": "^3.0.7",
