--- a/package.json
+++ b/package.json
@@ -49,19 +49,20 @@
     "http-status": "^1.4.0",
     "joi": "^17.3.0",
     "jsonwebtoken": "^9.0.2",
+    "minimist": "*",
     "morgan": "^1.9.1",
     "pg": "^8.11.3",
     "pm2": "^5.1.0",
     "redis": "^4.6.13",
     "rsa-pem-from-mod-exp": "^0.8.6",
     "sequelize": "^6.29.0",
+    "swagger-node-express": "~2.0",
     "umzug": "^3.2.1",
     "winston": "^3.2.1",
-    "xss-clean": "^0.1.1",
-    "swagger-node-express": "~2.0",
-    "minimist": "*"
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.7",
     "coveralls": "^3.0.7",
     "eslint": "^7.0.0",
     "jest": "^26.0.1",
